Changing some properties configurations and refactoring the code. Improving the repository test and changing the list type to a thread safe one.